# KROOM-3

./: .gitignore  .gitmodules  Doxyfile  cmake_linux.sh  cmake_msvc.cmd  cmake_msvc2019_x86.cmd  cmake_msvc2019_x86_64.cmd  cmake_msvc2022.cmd  cmake_msvc2022_x86.cmd  cmake_msvc2022_x86_64.cmd  cmake_msvc2026_x86.cmd  cmake_msvc2026_x86_64.cmd
neo/: CMakeLists.txt  _embed_shaders.bat  astyle-code.bat  astyle-code.sh  config.h.in  vcpkg.json
neo/CMakeModules/: CPUDefine.cmake  FindWindowsSDK.cmake
neo/cm/: CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_translate.cpp
neo/d3xp/: AF.cpp  AFEntity.cpp  Achievements.cpp  Actor.cpp  BrittleFracture.cpp  CMakeLists.txt  Camera.cpp  Camera.h  EditorEntity.cpp  EditorEntity.h  Entity.cpp  Entity.h  EnvironmentProbe.cpp  Fx.cpp  Game.h  GameEdit.cpp  Game_dialogs.cpp  Game_dialogs.h  Game_dialogs_local.cpp  Game_edit.cpp  Game_edit.h  Game_local.cpp  Game_local.h  Game_mainmenu.cpp  Game_mainmenu.h  Game_network.cpp  Grabber.cpp  Grabber.h  IK.cpp  Item.cpp  Item.h  Leaderboards.cpp  Leaderboards.h  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  (+20 more)
neo/d3xp/ai/: AAS_debug.cpp  AAS_pathing.cpp  AAS_routing.cpp  AI.cpp  AI.h  AI_Vagary.cpp  AI_events.cpp  AI_pathing.cpp
neo/d3xp/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp
neo/d3xp/decls/: DeclPDA.cpp
neo/d3xp/gamesys/: Callbacks.cpp  Class.cpp  Class.h  Event.cpp  Event.h  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
neo/d3xp/menus/: MenuHandler.cpp  MenuHandler.h  MenuHandler_HUD.cpp  MenuHandler_PDA.cpp  MenuHandler_Scoreboard.cpp  MenuHandler_Shell.cpp  MenuScreen.h  MenuScreen_HUD.cpp  MenuScreen_Scoreboard.cpp  MenuScreen_Shell_Bindings.cpp  MenuScreen_Shell_ControllerLayout.cpp  MenuScreen_Shell_Controls.cpp  MenuScreen_Shell_Credits.cpp  MenuScreen_Shell_Dev.cpp  MenuScreen_Shell_Difficulty.cpp  MenuScreen_Shell_GameLobby.cpp  MenuScreen_Shell_GameOptions.cpp  MenuScreen_Shell_Gamepad.cpp  MenuScreen_Shell_GraphicsOptions.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Load.cpp  MenuScreen_Shell_ModeSelect.cpp  MenuScreen_Shell_NewGame.cpp  MenuScreen_Shell_PartyLobby.cpp  MenuScreen_Shell_Pause.cpp  MenuScreen_Shell_Playstation.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Save.cpp  MenuScreen_Shell_Settings.cpp  MenuScreen_Shell_Singleplayer.cpp  MenuScreen_Shell_SystemOptions.cpp  MenuWidget_Button.cpp  MenuWidget_DynamicList.cpp  MenuWidget_InfoBox.cpp  MenuWidget_List.cpp  MenuWidget_LobbyList.cpp  MenuWidget_PDA_AudioFiles.cpp  MenuWidget_PDA_EmailInbox.cpp  MenuWidget_PDA_Objective.cpp  (+1 more)
neo/d3xp/physics/: Clip.cpp  Force_Drag.cpp  Force_Field.cpp  Force_Grab.cpp  Force_Grab.h  Physics_AF.cpp  Physics_AF.h  Physics_Base.cpp  Physics_Monster.cpp  Physics_Player.cpp  Physics_RigidBody.cpp  Push.cpp
neo/d3xp/script/: Script_Compiler.cpp  Script_Compiler.h  (+5 more)
neo/framework/: BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Common_demos.cpp  Common_dialog.cpp  Common_dialog.h  Common_load.cpp  Common_local.h  Common_mapconvert.cpp  Common_menu.cpp  Common_printf.cpp  Common_tools.cpp  Compressor.cpp  Console.cpp  Console.h  DebugGraph.cpp  DeclAF.cpp  DeclManager.cpp  DeclParticle.cpp  EditField.cpp  File.cpp  File.h  FileSystem.cpp  FileSystem.h  File_Resource.cpp  File_SaveGame.cpp  File_SaveGame.h  File_Zip.cpp  File_Zip.h  Licensee.h  Unzip.h  UsercmdGen.cpp  UsercmdGen.h  Zip.cpp  Zip.h  common_frame.cpp
neo/idlib/: Base64.cpp  BitMsg.h  CMakeLists.txt  CmdArgs.cpp  Debug.cpp  Debug.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  LangDict.cpp  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  ParallelJobList.cpp  ParallelJobList.h  Parser.cpp  RectAllocator.cpp  Serializer.h  Str.cpp  Str.h  StrStatic.h  Timer.cpp  Timer.h  Token.h  precompiled.h
neo/imgui/: BFGimgui.h  BFGimguiImpl.cpp  ImGui_Hooks.h
neo/renderer/: BinaryImage.cpp  BinaryImage.h  BufferObject.cpp  Cinematic.cpp  Cinematic.h  CinematicBink.cpp  CinematicBink.h  CinematicFFMPEG.cpp  CinematicFFMPEG.h  CinematicRoQ.cpp  CinematicRoQ.h  CmdlineProgressbar.cpp  DeviceContext.cpp  Font.h  Framebuffer.h  GLMatrix.cpp  GuiModel.cpp  GuiModel.h  Image.h  ImageManager.cpp  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  Image_process.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelDecal.cpp  ModelManager.cpp  ModelOverlay.cpp  Model_local.h  Model_md3.cpp  Model_md5.cpp  Model_prt.cpp  RenderBackend.cpp  RenderBackend.h  RenderCommon.h  (+27 more)
neo/sound/: CinematicAudio.h  OggFile.cpp  OggFile.h  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_world.cpp  sound.h  stbvorbis_impl.c
neo/swf/: SWF.h  SWF_Events.cpp  SWF_Image.cpp  SWF_Inflate.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_Names.cpp  SWF_Render.cpp  SWF_ScriptFunction.cpp  SWF_ScriptObject.cpp  SWF_ScriptVar.cpp  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_Sprites.cpp  SWF_Sprites.h  SWF_Types.h
neo/sys/: DeviceManager.cpp  DeviceManager.h  LightweightCompression.cpp  PacketProcessor.cpp  sys_dedicated_server_search.cpp  sys_dedicated_server_search.h  sys_lobby.cpp  sys_lobby.h  sys_lobby_backend.h  sys_lobby_backend_direct.cpp  sys_lobby_backend_direct.h  sys_lobby_migrate.cpp  sys_lobby_users.cpp  sys_local.cpp  sys_local.h  sys_localuser.cpp  sys_localuser.h  sys_profile.cpp  sys_public.h  sys_savegame.cpp  sys_savegame.h  sys_session.h  sys_session_callbacks.cpp  sys_session_local.cpp  sys_session_local.h  sys_session_savegames.cpp  sys_signin.cpp  sys_voicechat.cpp  sys_voicechat.h
neo/ui/: ChoiceWindow.cpp  DeviceContext.cpp  EditWindow.cpp  GameBearShootWindow.cpp  GameBearShootWindow.h  GameBustOutWindow.cpp  GameBustOutWindow.h  GameSSDWindow.cpp  GuiScript.cpp  ListGUI.cpp  ListWindow.cpp  RegExp.cpp  RegExp_old.h  SimpleWindow.cpp  SimpleWindow.h  UserInterface.cpp  UserInterface.h  UserInterfaceLocal.h  Window.cpp  Window.h  Winvar.cpp  Winvar.h
(+286 files in other folders)
